@startuml

class Users {
  +UserId : INT <<PK>>
  +Username : VARCHAR(100) <<Unique>>
  +Email : VARCHAR(100) <<Unique>>
  +Password : VARCHAR(255)
  +Role : VARCHAR(20) = "user"
  +CreatedAt : TIMESTAMP
}

class Games {
  +GameId : INT <<PK>>
  +IgdbId : INT <<Unique>>
  +GameTitle : VARCHAR(255)
}

class Ratings {
  +RatingId : INT <<PK>>
  +UserId : INT <<FK>>
  +GameId : INT <<FK>>
  +Score : INT CHECK (1-10)
  +Review : VARCHAR(500)
  +CreatedAt : TIMESTAMP
}

class GameStatus {
  +StatusId : INT <<PK>>
  +UserId : INT <<FK>>
  +GameId : INT <<FK>>
  +Status : VARCHAR(10) 
  +UpdatedAt : TIMESTAMP
}

class Favorites {
  +FavoriteId : INT <<PK>>
  +UserId : INT <<FK>>
  +GameId : INT <<FK>>
  +AddedAt : TIMESTAMP
}

class Recommendations {
  +RecommendationId : INT <<PK>>
  +UserId : INT <<FK>>
  +GameId : INT <<FK>>
  +IgdbId : INT
  +GameTitle : VARCHAR(255)
  +Reason : TEXT
  +CreatedAt : TIMESTAMP
}

Users "1" -- "0..*" Ratings : califica
Users "1" -- "0..*" GameStatuses : juega
Users "1" -- "0..*" Favorites : tiene
Users "1" -- "0..*" Recommendations : recibe
Games "1" -- "0..*" Ratings : recibe
Games "1" -- "0..*" GameStatuses : estado
Games "1" -- "0..*" Favorites : favorito
Games "1" -- "0..*" Recommendations : recomendado

@enduml
